--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-    <body>
-        <h1>hello</h1>
-    </body>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>First</title>
+  </head>
+  <body>
+    <p>hello coursera</p>
+  </body>
 </html>
